# muninn

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  screenshot.avif
.devana/: 20260625T083533Z-P0-apple-speech-helper-toctou.md  20260625T083534Z-P1-accessibility-grant-loses-transcript.md  20260625T083535Z-P1-replay-audio-deleted-before-persist.md  20260625T083536Z-P1-replay-prompt-leak-refine-context.md  20260625T083537Z-P2-whitespace-only-text-injected.md  20260625T083538Z-P2-external-toggle-start-gate.md  20260625T083539Z-P2-url-scheme-disable-ignored-reload.md  20260625T083540Z-P2-openai-streaming-truncates-segments.md  20260625T091238Z-P2-external-step-stdin-write-deadlock.md  20260625T091239Z-P2-google-batch-multisegment-truncation.md  20260625T091240Z-P3-streaming-error-close-as-empty.md
.github/workflows/: benchmarks.yml  ci.yml  release.yml
benches/: runtime_bottlenecks.rs
configs/: config.sample.toml
crates/muninn/: Cargo.toml  README.md
crates/muninn/src/: audio.rs  autostart.rs  config.rs  envelope.rs  error.rs  hotkeys.rs  injector.rs  internal_tools.rs  lib.rs  main.rs  refine.rs  replay.rs  runner.rs  scoring.rs  secrets.rs  state.rs  stt_google_tool.rs  stt_openai_tool.rs
crates/muninn/tests/fixtures/: envelope-openai-missing-raw-text.json
scripts/: build-release.sh  homebrew-update-sha256.sh  package-macos-app.sh  package-release.sh  resolve-version.sh
specs/: _handoff.md  index.md
specs/00-workspace-types/: design.md  requirements.md  tasks.md
specs/01-pipeline-runner/: design.md  requirements.md  tasks.md
specs/02-core-engine/: design.md  requirements.md  tasks.md
specs/03-stt-wrappers/: design.md  requirements.md  tasks.md
specs/04-macos-adapter/: design.md  requirements.md  tasks.md
specs/05-app-integration/: design.md  requirements.md  tasks.md
specs/06-replay-logging/: design.md  requirements.md  tasks.md
specs/07-refine-step/: design.md  requirements.md  tasks.md
specs/08-current-runtime-surface/: design.md  requirements.md  tasks.md
specs/09-security-trust-boundaries/: design.md  requirements.md  tasks.md
specs/10-busy-input-backpressure/: design.md  requirements.md  tasks.md
specs/11-runtime-resource-bounds/: design.md  requirements.md  tasks.md
specs/12-google-live-stt/: design.md  requirements.md  tasks.md
specs/13-runtime-resilience/: design.md  requirements.md  tasks.md
specs/14-audio-capture-footprint/: design.md  requirements.md  tasks.md
specs/15-provider-io-footprint/: design.md  requirements.md  tasks.md
specs/16-replay-footprint-pruning/: design.md  requirements.md  tasks.md
specs/17-pipeline-envelope-churn/: design.md  requirements.md  tasks.md
specs/18-scoring-runtime-wiring/: design.md  requirements.md  tasks.md
specs/19-inprocess-internal-steps/: design.md  requirements.md  tasks.md
specs/20-audio-buffer-representation/: design.md  requirements.md  tasks.md
specs/21-hotkey-drop-observability/: design.md  requirements.md  tasks.md
specs/22-replay-audio-retention/: design.md  requirements.md  tasks.md
specs/23-nonstrict-contract-diagnostics/: design.md  requirements.md  tasks.md
specs/24-config-watcher-efficiency/: design.md  requirements.md  tasks.md
specs/25-runtime-compatibility-edges/: design.md  requirements.md  tasks.md
specs/26-runtime-troubleshooting-feedback/: design.md  requirements.md  tasks.md
specs/32-deepgram-stt/: design.md  (+2 more)
src/: apple_speech_transcriber.swift  audio.rs  autostart.rs  config.rs  config_watch.rs  envelope.rs  error.rs  external_control.rs  hotkeys.rs  injector.rs  internal_tools.rs  lib.rs  logging.rs  main.rs  mock.rs  orchestrator.rs  permissions.rs  platform.rs  refine.rs  replay.rs  replay_dispatch.rs  runner.rs  runtime_flow.rs  runtime_permissions.rs  runtime_pipeline.rs  runtime_shell.rs  runtime_tray.rs  runtime_worker.rs  scoring.rs  secrets.rs  state.rs  streaming_transcription.rs  stt_apple_speech_tool.rs  stt_deepgram_tool.rs  stt_google_tool.rs  stt_openai_tool.rs  stt_whisper_cpp_tool.rs  target_context.rs  transcription.rs
tests/: pipeline_runner_contract.rs  runtime_flows_integration.rs
(+31 files in other folders)
