[workspace]
resolver = "2"
members = [
  "crates/muninn",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Muninn Contributors"]
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hound = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "io-util", "sync"] }
toml = "0.8"
uuid = { version = "1", features = ["serde", "v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
