[package]
name = "muninn-speach-to-text"
version = "0.1.2"
authors = ["Bruno Meilick <b@bnomei.com>", "Muninn Contributors"]
edition = "2021"
license = "MIT"
rust-version = "1.78"
description = "AI-native macOS menu bar dictation for developers."
readme = "README.md"
repository = "https://github.com/bnomei/muninn"
homepage = "https://github.com/bnomei/muninn"
documentation = "https://docs.rs/muninn-speach-to-text"
keywords = ["dictation", "speech-to-text", "macos", "voice", "automation"]
default-run = "muninn"
autobins = false

[lib]
name = "muninn"
path = "src/lib.rs"

[[bin]]
name = "muninn"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
hound = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.34"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "io-util", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tray-icon = "0.21"
uuid = { version = "1", features = ["serde", "v7"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
core-graphics = "0.25"
cpal = "0.16"
macos-accessibility-client = "0.0.1"
objc2-avf-audio = { version = "0.3.2", features = ["AVAudioApplication", "block2"] }
objc2-app-kit = { version = "0.2.2", features = ["NSRunningApplication", "NSWorkspace", "libc"] }
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-foundation = { version = "0.2.2", features = ["NSString"] }
objc2 = "0.6.4"
rdev = "0.5"
tracing-oslog = "0.3"

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "4.3.0" }
tempfile = "3"

[[bench]]
name = "runtime_bottlenecks"
harness = false
