[package]
name = "muninn-voice-to-text"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Hackable macOS menu bar dictation with a configurable transcription pipeline."
readme = "README.md"
repository = "https://github.com/bnomei/muninn"
homepage = "https://github.com/bnomei/muninn"
documentation = "https://docs.rs/muninn-voice-to-text"
keywords = ["dictation", "speech-to-text", "macos", "voice", "automation"]
default-run = "muninn"
autobins = false

[lib]
name = "muninn"
path = "src/lib.rs"

[[bin]]
name = "muninn"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
hound.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tao = "0.34"
tray-icon = "0.21"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dotenvy = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
cpal = "0.16"
macos-accessibility-client = "0.0.1"
objc2-avf-audio = { version = "0.3.2", features = ["AVAudioApplication"] }
objc2-core-graphics = "0.3.2"
rdev = "0.5"
